--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <header>
         Helolo html
         
-    <header 2>
-        bye
+    <header >
+        double hello
     </header>
 
 </body>
